MiniBrowser Build Fix w/ Release Builds https://bugs.webkit.org/show_bug.cgi?id=273140

Reviewed by Elliott Williams.

MiniBrowser was seeing certain headers multiple times due to includes.
This was causing a build failure on certain SDKs.

From talking with Elliott, removing the #import webkit from the pch and moving
it to the select headers files resolved the problem.

* Tools/MiniBrowser/mac/AppDelegate.h:
* Tools/MiniBrowser/mac/MiniBrowser_Prefix.pch:
* Tools/MiniBrowser/mac/WK2BrowserWindowController.h:

Canonical link: https://commits.webkit.org/277909@main